# SoundObject_source

./: CMakeLists.txt  README.md
resource/: Info.plist  SOeditor.uidesc  SoundObject.uidesc  resource.h  win32resource.aps  win32resource.rc
source/: SO2ndordIIRfilters.h  SODDL.h  SODSPparam.cpp  SODSPparam.h  SOHVLines.cpp  SOHVLines.h  SOHVLinescreator.cpp  SOLPF.h  SOTextEdit.cpp  SOTextEdit.h  SOTextEditcreator.cpp  SOXYPad.cpp  SOXYPad.h  SOXYPadcreator.cpp  SOcids.h  SOconfig.h  SOcontroller.cpp  SOcontroller.h  SOentry.cpp  SOextparam.cpp  SOextparam.h  SOparam.h  SOpinna.h  SOprocessor.cpp  SOprocessor.h  SOudsampling.h  SOvst3editor.cpp  SOvst3editor.h  version.h
source/Aachen_KEMAR/: IR_TBL_L_44.h  IR_TBL_L_48.h  IR_TBL_L_96.h  IR_TBL_R_44.h  IR_TBL_R_48.h  IR_TBL_R_96.h
source/ML_GHRIR/: IR_TBL_L_44.h  IR_TBL_L_48.h  IR_TBL_L_96.h  IR_TBL_R_44.h  IR_TBL_R_48.h  IR_TBL_R_96.h
source/ML_HRIR_1/: IR_TBL_L_44.h  IR_TBL_L_48.h  IR_TBL_L_96.h  IR_TBL_R_44.h  IR_TBL_R_48.h  IR_TBL_R_96.h
source/ML_HRIR_2/: IR_TBL_L_44.h  IR_TBL_L_48.h  IR_TBL_L_96.h  IR_TBL_R_44.h  IR_TBL_R_48.h  IR_TBL_R_96.h
source/York_KEMAR/: IR_TBL_L_44.h  IR_TBL_L_48.h  IR_TBL_L_96.h  IR_TBL_R_44.h  IR_TBL_R_48.h  IR_TBL_R_96.h
source/York_KU100/: IR_TBL_L_44.h  IR_TBL_L_48.h  IR_TBL_L_96.h  IR_TBL_R_44.h  IR_TBL_R_48.h  IR_TBL_R_96.h
